fix(header/nav): add rem width to brand name to show on firefox
Brand name is not an image and does not have a width or hight so
you have to add a fixed width to it.

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ header {
 }
 
 .brandName {
-  width: 85%;
+  width: 13rem;
 }
 
 footer {
